# FireLaunch

./: .editorconfig  .gitignore  .taurignore  Cargo.toml  README.md  build-release-linux.sh  build.rs  flake.nix  package.json  releases.json  result  sha256sums.txt  svelte.config.js  win_installer.nsi  win_res.rc
.github/workflows/: ci.yml  publish.yml
firesquare-components/: Cargo.toml
firesquare-components/src/: js_api.rs  lib.rs
firesquare-launcher/: Cargo.toml  tauri.conf.json
firesquare-launcher-ui/: Cargo.toml
firesquare-launcher-ui/src/: app.rs
firesquare-structs/: Cargo.toml
firesquare-web-api/: Cargo.toml
firesquare-web-ui/: Cargo.toml  index.html
firesquare-web-ui/src/: app.rs
src/: lib.rs  main.rs  storage.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/gui/: app.rs  async_worker.rs  mod.rs
src/gui/components/: alert.rs  mod.rs
src/routes/: +page.svelte
src/storage/: mod.rs  storage.rs
src/structures/: asset_index.rs  mod.rs  version_manifest.rs
src/utils/: crypto.rs  ipfs.rs  log.rs  mod.rs  net.rs  parallel.rs
