[package]
name = "firelaunch"
version = "0.1.0"
edition = "2021"
description = "firesquare minecraft launcher"
authors = ["Egor Ternovoy <cofob@riseup.net>"]
repository = "https://github.com/fire-square/FireLaunch"
license = "GPL-3.0-or-later"
include = ["/src", "/resources", "/win_res.rc", "/LICENSE"]

[dependencies]
# gtk4 gui
gtk4 = "^0.5"=
relm4 = { version = "0.5.0-rc.2", features = [ "libadwaita" ] } # gui framework
relm4-macros = "0.5.0-rc.2"
relm4-components = "0.5.0-rc.2"
tracker = "^0.2" # struct change tracking

# logging
log = "^0.4"                                                   # logging facade
env_logger = "^0.10"                                           # logging formatter
log-panics = { version = "^2", features = ["with-backtrace"] } # log panics

# error handling
anyhow = "^1.0"    # error handling
thiserror = "^1.0" # for creating custom errors

# networking
reqwest = { version = "^0.11", features = ["json"] } # async http client

# serialization
serde = { version = "^1.0", features = ["derive"] } # serialization
serde_json = "^1.0"                                 # json serialization

# async
tokio = { version = "^1.25", features = ["full"] } # async runtime

# filesystem
dirs = "^4.0" # well known dirs
zip = "^0.6"  # zip (jar) file handling

# crypto
sha1 = "^0.10" # for minecraft assets
sha256 = "^1"  # for authorization
hex = "^0.4"   # for converting bytes to hex
rand = "^0.8"  # salt generation

# other
num_cpus = "^1.15" # cpu count

[build-dependencies]
embed-resource = "1.8" # embed assets into binary (windows)
anyhow = "^1.0" # error handling
vergen = "^7" # get build info


[profile.release]
overflow-checks = true
incremental = false
codegen-units = 1
opt-level = 3
debug = 1
strip = true
lto = true
