[package]
name = "firesquare-components"
version = "0.1.0"
description = "Firesquare UI components"
authors = ["Egor Ternovoy <cofob@riseup.net>"]
edition = "2021"
rust-version = "1.57"

[dependencies]
serde-wasm-bindgen = "0.4.3"
js-sys = "0.3.59"
serde = { version = "1.0.140", features = ["derive"] }
wasm-bindgen = { version = "0.2.82", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.32"
web-sys = "0.3.59"
yew = { version="0.20.0", features = ["csr"] }

firesquare-structs = { path = "../firesquare-structs" }
