[package]
name = "firesquare-structs"
version = "0.1.0"
description = "Firesquare shared serde structs"
authors = ["Egor Ternovoy <cofob@riseup.net>"]
edition = "2021"
rust-version = "1.57"

[dependencies]
serde = { version = "^1", features = ["derive"] }
url = { version = "^2", features = ["serde"] }
