[package]
name = "firesquare-frontend"
version = "0.1.0"
description = "A Tauri App"
authors = ["Egor Ternovoy <cofob@riseup.net>"]
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
# tauri
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["shell-open", "updater"] }

# logging
log = "^0.4"
env_logger = "^0.10"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
debug = 1
strip = true
lto = true
codegen-units = 1
opt-level = 3
